--- a/pages/apps/moodify/login.html
+++ b/pages/apps/moodify/login.html
@@ -3,93 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Login to Moodify - Your personalized music player.">
   <title>Login | Moodify</title>
-  <link rel="stylesheet" href="../../../assets/css/main.css">
+  <link rel="stylesheet" href="styles.css"> <!-- Link to your styles.css file -->
+  <script src="API.js" defer></script> <!-- Include the API.js file -->
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: var(--background-color);
-      color: var(--primary-text-color);
-      text-align: center;
-      padding-top: 100px;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
     .login-container {
-      width: 100%;
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 30px;
-      background-color: var(--card-background);
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      background-color: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      text-align: center;
     }
 
-    h2 {
-      margin-bottom: 20px;
-      color: var(--accent-color);
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #333;
     }
 
     input {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin: 10px 0;
+      border-radius: 4px;
       border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
     }
 
     button {
       width: 100%;
-      padding: 12px;
-      background-color: var(--accent-color);
-      color: var(--background-color);
+      padding: 10px;
+      background-color: #28a745;
+      color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       font-size: 1.2rem;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background-color: var(--hover-accent-color);
+      background-color: #218838;
     }
 
-    .error-message {
+    .error {
       color: red;
-      font-size: 0.9rem;
-      display: none;
+      margin-top: 10px;
+    }
+
+    #login-status {
+      margin-top: 15px;
+      font-size: 1rem;
+      color: #333;
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h2>Login to Moodify</h2>
+    <h1>Login to Moodify</h1>
     <form id="login-form">
-      <input type="text" id="username" placeholder="Enter username" required>
-      <input type="password" id="password" placeholder="Enter password" required>
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <p class="error-message" id="error-message">Invalid username or password. Please try again.</p>
+    <p id="login-status"></p>
+    <p class="error" id="login-error"></p>
   </div>
 
   <script>
-    document.getElementById("login-form").addEventListener("submit", function(e) {
-      e.preventDefault();
+    // Get the callback URL from the query parameters
+    const urlParams = new URLSearchParams(window.location.search);
+    const callbackUrl = urlParams.get('callback_url') || 'moodify.html'; // Default to 'moodify.html' if not provided
 
-      // Simulating a login check
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      if (username === "user" && password === "password123") {
-        // Set the user login state and redirect to Moodify page on successful login
-        localStorage.setItem('isLoggedIn', 'true');
-        window.location.href = "moodify.html"; // Adjust to actual path if needed
+    // Handle login form submission
+    document.getElementById('login-form').addEventListener('submit', (event) => {
+      event.preventDefault();
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      
+      // Handle login attempt
+      if (handleLogin(username, password)) {
+        // Redirect to the callback URL after successful login
+        window.location.href = callbackUrl;
       } else {
         // Show error message
-        document.getElementById("error-message").style.display = "block";
+        document.getElementById('login-error').innerText = 'Invalid username or password';
       }
     });
+
+    // Function to handle user login
+    function handleLogin(username, password) {
+      // Simple mock validation (testing purposes)
+      const users = {
+        demo123: { username: 'demo123', password: 'demo' },
+      };
+
+      const user = users[username];
+      if (user && user.password === password) {
+        document.getElementById('login-status').innerText = 'Logged in as ' + username;
+        return true;
+      } else {
+        document.getElementById('login-status').innerText = 'Invalid credentials. Please try again.';
+        return false;
+      }
+    }
   </script>
 </body>
 </html>
